--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
 			"name" : "Basil Suter",
 			"email" : "git@nadar.io",
 			"homepage" : "https://github.com/nadar"
+		},
+		{
+			"name": "Alex Schmid",
+			"email": "alex.schmid@stud.unibas.ch"
 		}
 	],
 	"support" : {
