Adjustments for PR

--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,6 @@
 	"support" : {
 		"issues" : "https://github.com/luyadev/luya-privacy/issues"
 	},
-	"require-dev" : {
-	    "luyadev/luya-testsuite" : "~1.0.0",
-	    "php-coveralls/php-coveralls": "^1.0",
-        "twbs/bootstrap": "v4.0.0-beta"
-	},
 	"autoload" : {
 		"psr-4" : {
 			"luya\\privacy\\" : "src/"
@@ -31,19 +26,13 @@
 	},
 	"autoload-dev" : {
        "psr-4" : {
-           "privacytests\\" : "tests/"
+           "luya\\privacy\\tests\\" : "tests/"
        }
     },
 	"extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        },
         "luya" : {
         	"blocks" : ["src/frontend/blocks"]
         }
-    },
-    "config": {
-         "platform": {"php": "7.0"}  
     },
     "repositories": [
         {
