Working widget standard output test and working widet with decline button output test

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"issues" : "https://github.com/luyadev/luya-privacy/issues"
 	},
 	"require-dev" : {
-	    "luyadev/luya-testsuite" : "~1.0.0",
+	    "luyadev/luya-testsuite" : "~1.0.0"
 	},
 	"autoload" : {
 		"psr-4" : {
@@ -36,5 +36,5 @@
         "luya" : {
         	"blocks" : ["src/frontend/blocks"]
         }
-    },
+    }
 }
