--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name" : "luyadev/luya-privacy",
 	"description" : "The LUYA Privacy extension provides helpers for privacy.",
 	"type" : "luya-extension",
-	"keywords" : ["php", "luya", "extension", "yii2", "yii", "content"],
+	"keywords" : ["php", "luya", "extension", "yii2", "yii", "privacy", "cookie", "gpdr", "widget"],
 	"license": "MIT",
 	"homepage" : "http://luya.io",
 	"authors" : [
